additional-deployments/cluster-configs/monitoring-manifests.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/hostname: alertmanager.vinnysabatini.me
spec:
  loadBalancerClass: io.cilium/l2-announcer
  ports:
  - name: http-web
    port: 9093
    protocol: TCP
    targetPort: 9093
  selector:
    app.kubernetes.io/name: alertmanager
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/hostname: prometheus.vinnysabatini.me
spec:
  loadBalancerClass: io.cilium/l2-announcer
  selector:
    app.kubernetes.io/name: prometheus
  ports:
  - name: http-web
    port: 9090
    protocol: TCP
    targetPort: 9090
  type: LoadBalancer
